mobile nav z-index fixed

--- a/static/css/style-main.sass
+++ b/static/css/style-main.sass
@@ -265,7 +265,7 @@
 
 .mobile-nav-active
   display: block
-  z-index: 1
+  z-index: 2
   height: 100%
   transition: .3s
 
